# fpbiolib

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
fpbio-tools/: curve_fitting.py  custom_plots.py  df_cleanup.py  df_transforms.py  lists.py  normalize.py  plotly_config.py  redis_storage.py
fpbiolib/: __init__.py  array_transforms.py  baselines.py  cache_utils.py  characters.py  curve_fitting.py  curvefitting.py  custom_plots.py  datetime_parsing.py  df_cleanup.py  df_storage.py  df_transforms.py  dir_file_ops.py  feather_storage.py  file_parsing.py  find.py  formatting.py  ftir_band_assignments.py  gaussian.py  gaussians.py  lineshapes.py  lists.py  plotly_config.py  plotting.py  redis_storage.py  reduction.py  rounders.py  shrink_df.py  similarity.py  trace_compare.py  uncategorized.py
fpbiolib/archive/: formatting.py
fpbiolib/config/: settings.py
fpbiolib/dash/: __init__.py  aio_sliders.py  baseline_correction.py  chkbox_btn.py  download_html.py  downloads.py  float_range_slider.py  ftir_curve_fit.py  ftir_main_graph.py  generate_html_table.py  graph_params.py  light_scattering_uvvis.py  line_width.py  log_float_range.py  log_single_float.py  main_graph_basic.py  outputs.py  peak_alignment.py  peak_labeling.py  second_derivative.py  single_float.py  slider_formatting.py  sliders.py  switches.py  symbols.py  trace_compare.py  trace_main_graph.py  trace_sel_naming.py  truncation.py  uploader.py  uvvis_main_graph.py  uvvis_uploader.py  x_axis_label_ftir.py  x_axis_label_trace.py  y_axis_label_ftir.py  y_axis_label_trace.py
fpbiolib/dashapps/: custom_plots.py  peak_labeling.py  upload.py
fpbiolib/twarp/: __init__.py  cow.py  optim_cow.py  (+1 more)
tracetools/: fig_html_download.py  file_parsing.py  formatting.py  gaussian.py  shrink_df.py  trace_compare.py
